# rust-igd

./: Cargo.toml
.github/workflows/: ci.yml
examples/: add_any_port.rs  add_port.rs  add_remove.rs  aio.rs  external_ip.rs  remove_port.rs
src/: errors.rs  gateway.rs  lib.rs  search.rs
src/aio/: gateway.rs  search.rs  soap.rs
src/common/: messages.rs  mod.rs  options.rs  parsing.rs  tests.rs
