[package]
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
documentation = "https://docs.rs/igd/"
edition = "2021"
homepage = "https://github.com/sbstp/rust-igd"
keywords = ["igd", "upnp"]
license = "MIT"
name = "igd"
readme = "README.md"
repository = "https://github.com/sbstp/rust-igd"
version = "0.12.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
attohttpc = {version = "0.16", default-features = false}
bytes = {version = "1", optional = true}
futures = {version = "0.3", optional = true}
http = {version = "0.2", optional = true}
log = "0.4"
rand = "0.8"
tokio = {version = "1", optional = true, features = ["net"]}
url = "2"
xmltree = "0.10"

[dependencies.hyper]
default-features = false
features = ["client", "http1", "http2", "runtime"]
optional = true
version = "0.14"

[dev-dependencies]
http-body-util = "0.1.2"
hyper-new = { package = "hyper", version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1.10", features = ["tokio"] }
simplelog = "0.9"
test-log = "0.2"
tokio = {version = "1", features = ["full"]}

[features]
aio = ["futures", "tokio", "hyper", "bytes", "http"]
default = []

[[example]]
name = "add_any_port"

[[example]]
name = "add_port"

[[example]]
name = "add_remove"

[[example]]
name = "aio"
required-features = ["aio"]

[[example]]
name = "external_ip"

[[example]]
name = "remove_port"
