[package]
authors = ["Simon Bernier St-Pierre <sbernierstpierre@gmail.com>"]
description = "Internet Gateway Protocol client"
documentation = "https://docs.rs/igd/"
edition = "2021"
homepage = "https://github.com/sbstp/rust-igd"
keywords = ["igd", "upnp"]
license = "MIT"
name = "igd"
readme = "README.md"
repository = "https://github.com/sbstp/rust-igd"
version = "0.12.1"

[package.metadata.docs.rs]
all-features = true

[dependencies]
log = "0.4"
rand = "0.8"
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls"] }
thiserror = "2.0.4"
tokio = {version = "1", optional = true, features = ["net"]}
url = "2"
xmltree = "0.11"

[dev-dependencies]
http-body-util = "0.1"
hyper = { package = "hyper", version = "1", features = ["server", "http1"] }
hyper-util = { version = "0.1", features = ["tokio"] }
paste = "1.0.15"
simplelog = "0.9"
test-log = "0.2"
tokio = {version = "1", features = ["full"]}

[features]
aio = ["tokio"]
default = []

[[example]]
name = "add_any_port"

[[example]]
name = "add_port"

[[example]]
name = "add_remove"

[[example]]
name = "aio"
required-features = ["aio"]

[[example]]
name = "external_ip"

[[example]]
name = "remove_port"
